# zero2prod

./: Cargo.toml  configuration.yaml
migrations/: 20221130173354_create_subscriptions_table.up.sql
scripts/: init_db.sh
src/: configurations.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
