[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.2.1"
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread"] }
serde = "1.0.115"
config = { version = "0.13.2", default-features = false, features = ["yaml"] }
sqlx = { version = "0.6.2", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
uuid = { version = "1.2.2", features = ["v4"] }
chrono = { version = "0.4.23", default-features = false, features = ["clock"] }

[dev-dependencies]
reqwest = { version = "0.11.13", features = ["json"] }